--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Tajawal:wght@200;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
 
 * {
   box-sizing: border-box;
 }
+
+html {
+  font-family: "Montserrat";
+}
+
 body {
   margin: 0;
   background-color: #3f3f3f;
-  font-family: "Montserrat";
 }
