--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 5rem;
-  background-color: #8a2b06;
+  background-color: #0077b6;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -16,7 +16,7 @@
 
 .main-image {
   width: 100%;
-  height: 25rem;
+  height: 35rem;
   z-index: 0;
   overflow: hidden;
 }
@@ -25,5 +25,5 @@
   width: 110%;
   height: 100%;
   object-fit: cover;
-  transform: rotateZ(-5deg) translateY(-4rem) translateX(-1rem);
+  transform: rotateZ(-5deg) translateY(-4rem) translateX(-5rem);
 }
