--- a/src/Components/Offers/OffersSummary.module.css
+++ b/src/Components/Offers/OffersSummary.module.css
@@ -1,18 +1,23 @@
 .summary {
   text-align: center;
-  max-width: 45rem;
-  width: 90%;
+  max-width: 40rem;
+  width: 95%;
   margin: auto;
-  margin-top: -10rem;
+  margin-top: -25rem;
   position: relative;
-  background-color: #383838;
-  color: white;
+  background-color: #90e1ef8f;
+  color: black;
   border-radius: 14px;
   padding: 1rem;
   box-shadow: 0 1px 18px 10px rgba(0, 0, 0, 0.25);
 }
 
 .summary h2 {
-  font-size: 2rem;
+  font-size: 1.7rem;
+  margin-top: 0;
+}
+
+p {
+  font-size: 1.2rem;
   margin-top: 0;
 }
