--- a/src/Components/UI/Loader.module.css
+++ b/src/Components/UI/Loader.module.css
@@ -15,7 +15,7 @@
   width: 7px;
   height: 7px;
   border-radius: 50%;
-  background: #7a2706;
+  background: #0077b6;
   margin: -4px 0 0 -4px;
 }
 .lds-roller div:nth-child(1) {
