before retrive offers

--- a/src/Components/Offers/AvailableOffers.module.css
+++ b/src/Components/Offers/AvailableOffers.module.css
@@ -8,11 +8,13 @@
 .OffersLoading {
   text-align: center;
   color: white;
+  margin: 10rem auto;
 }
 
 .OffersError {
   text-align: center;
   color: red;
+  margin: 10rem auto;
 }
 
 .offers ul {
