--- a/src/Components/Layout/Header/HeaderCartButton.module.css
+++ b/src/Components/Layout/Header/HeaderCartButton.module.css
@@ -11,7 +11,9 @@
   border-radius: 25px;
   font-weight: bold;
 }
-
+.title {
+  font-size: 0.8rem;
+}
 .button:hover,
 .button:active {
   background-color: #00245e;
