--- a/src/Components/Offers/AvailableOffers.module.css
+++ b/src/Components/Offers/AvailableOffers.module.css
@@ -1,8 +1,20 @@
+.sectionTitle {
+  text-align: center;
+  width: 100%;
+  margin-top: 8rem;
+}
 .offers {
-  max-width: 60rem;
   width: 95%;
   margin: 2rem auto;
   animation: offers-appear 1s ease-out forwards;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  padding: 5px;
 }
 
 .OffersLoading {
