--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -16,7 +16,7 @@
 
 .main-image {
   width: 100%;
-  height: 35rem;
+  height: 100vh;
   z-index: 0;
   overflow: hidden;
 }
@@ -25,4 +25,17 @@
   width: 110%;
   height: 100%;
   object-fit: cover;
+}
+@media (max-width: 768px) {
+  h1 {
+    font-size: 1.3rem;
+  }
+  .header {
+    height: 9rem;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.8rem;
+  }
+  .main-image img {
+  }
 }
