--- a/src/Components/Layout/Header/HeaderCartButton.module.css
+++ b/src/Components/Layout/Header/HeaderCartButton.module.css
@@ -7,6 +7,7 @@
   padding: 0.75rem 3rem;
   display: flex;
   justify-content: space-around;
+  gap: 0.5rem;
   align-items: center;
   border-radius: 25px;
   font-weight: bold;
@@ -29,7 +30,6 @@
   background-color: #0077b6;
   padding: 0.25rem 1rem;
   border-radius: 25px;
-  margin-left: 1rem;
   font-weight: bold;
 }
 
@@ -57,5 +57,10 @@
   }
   100% {
     transform: scale(1);
+  }
+}
+@media (max-width: 768px) {
+  .button {
+    padding: 0.75rem 1rem;
   }
 }
