--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400&family=Tajawal:wght@200;300;400;500;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Arabic:wght@100;200;300;400;500;600&display=swap");
 * {
   box-sizing: border-box;
 }
 
 html {
-  font-family: "Montserrat";
+  font-family: "Montserrat", "Noto Sans Arabic";
 }
 
 body {
   margin: 0;
-  background-color: #caf0f8;
+  background-color: #d9afd9;
+  background-image: linear-gradient(0deg, #d9afd9 0%, #97d9e1 100%);
 }
