--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -5,25 +5,21 @@
   max-height: 20rem;
   overflow: auto;
 }
-
-.total {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-weight: bold;
-  font-size: 1.5rem;
-  margin: 1rem 0;
+.empty {
+  text-align: center;
+  margin-top: 2rem;
+  font-weight: bolder;
 }
-
 .actions {
-  text-align: right;
+  text-align: center;
+  padding-top: 30px;
 }
 
 .actions button {
   font: inherit;
   cursor: pointer;
   background-color: transparent;
-  border: 1px solid #8a2b06;
+  border: 1px solid #0077b6;
   padding: 0.5rem 2rem;
   border-radius: 25px;
   margin-left: 1rem;
@@ -31,16 +27,16 @@
 
 .actions button:hover,
 .actions button:active {
-  background-color: #5a1a01;
-  border-color: #5a1a01;
+  background-color: #004c75;
+  border-color: #004c75;
   color: white;
 }
 
 .actions .button--alt {
-  color: #8a2b06;
+  color: #0077b6;
 }
 
 .actions .button {
-  background-color: #8a2b06;
+  background-color: #0077b6;
   color: white;
 }
