--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -14,28 +14,38 @@
   z-index: 10;
 }
 
-.main-image {
-  width: 100%;
-  height: 100vh;
-  z-index: 0;
-  overflow: hidden;
+.cart-lang {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
 }
-
-.main-image img {
-  width: 110%;
-  height: 100%;
-  object-fit: cover;
+.languageButton {
+  cursor: pointer;
+  border: none;
+  background-color: #004e96;
+  color: white;
+  padding: 0.7rem 1.5rem;
+  border-radius: 25px;
+  font: inherit;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+.languageButton:hover {
+  background-color: #00245e;
 }
 @media (max-width: 768px) {
   h1 {
     font-size: 1.3rem;
+    margin-top: -0.5rem;
   }
   .header {
-    height: 9rem;
+    height: 7.5rem;
     flex-direction: column;
     justify-content: center;
-    gap: 0.8rem;
+    gap: 0.1rem;
   }
-  .main-image img {
+  .cart-lang {
+    gap: 5px;
   }
 }
