--- a/src/Components/Offers/AvailableOffers.module.css
+++ b/src/Components/Offers/AvailableOffers.module.css
@@ -1,7 +1,7 @@
 .sectionTitle {
   text-align: center;
-  width: 100%;
-  margin-top: 20rem;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
 }
 .offers {
   width: 95%;
@@ -44,5 +44,11 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+@media (max-width: 768px) {
+  .sectionTitle {
+    margin-top: 2rem;
+    margin-bottom: 0;
   }
 }
