--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -18,9 +18,10 @@
 .actions button {
   font: inherit;
   cursor: pointer;
+  font-size: 0.9rem;
   background-color: transparent;
   border: 1px solid #0077b6;
-  padding: 0.5rem 2rem;
+  padding: 0.4rem 1.4rem;
   border-radius: 25px;
   margin-left: 1rem;
 }
