--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -36,6 +36,8 @@
 }
 @media (max-width: 768px) {
   h1 {
+    font-family: inherit;
+    font-weight: 400;
     font-size: 1.3rem;
     margin-top: -0.5rem;
   }
