--- a/src/Components/Cart/Cart.module.css
+++ b/src/Components/Cart/Cart.module.css
@@ -2,8 +2,19 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  max-height: 20rem;
+  max-height: 25rem;
   overflow: auto;
+}
+.cart-title {
+  border-bottom: 1px solid black;
+  margin-bottom: 10px;
+}
+.cart-title p {
+  font-size: 2rem;
+  text-align: center;
+  margin: 0;
+  margin-top: -15px;
+  font-weight: bold;
 }
 .empty {
   text-align: center;
@@ -12,7 +23,7 @@
 }
 .actions {
   text-align: center;
-  padding-top: 30px;
+  padding-top: 15px;
 }
 
 .actions button {
