--- a/src/Components/Cart/Checkout.module.css
+++ b/src/Components/Cart/Checkout.module.css
@@ -16,15 +16,19 @@
   font-weight: bold;
   margin-bottom: 0.25rem;
   display: block;
+  color: rgb(56, 56, 56);
+  margin-bottom: 5px;
 }
 
 .control input {
   font: inherit;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  width: 20rem;
-  max-width: 100%;
-  padding: 7px;
+  width: 300px; /* Set the desired width */
+  padding: 10px; /* Add some padding for better appearance */
+  border: 2px solid rgba(56, 56, 56, 0.603); /* Add a border with a light gray color */
+  border-radius: 5px; /* Round the corners of the input */
+  font-size: 16px; /* Set the font size */
+  color: #333; /* Set the text color */
+  transition: border-color 0.6s ease-out; /* Add transition properties */
 }
 
 .actions {
@@ -62,10 +66,10 @@
 }
 
 .invalid label {
-  color: #0077b6;
+  color: #700000;
 }
 
 .invalid input {
-  border-color: #00aed1;
+  border-color: #700000;
   background-color: #ffeff1;
 }
