--- a/src/Components/Layout/Header/HeaderCartButton.module.css
+++ b/src/Components/Layout/Header/HeaderCartButton.module.css
@@ -4,7 +4,7 @@
   border: none;
   background-color: #004e96;
   color: white;
-  padding: 0.75rem 3rem;
+  padding: 0.75rem 2rem;
   display: flex;
   justify-content: space-around;
   gap: 0.5rem;
@@ -23,7 +23,6 @@
 .icon {
   width: 1.35rem;
   height: 1.35rem;
-  margin-right: 0.5rem;
 }
 
 .badge {
@@ -62,5 +61,13 @@
 @media (max-width: 768px) {
   .button {
     padding: 0.45rem 1rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .button {
+    font-size: 1rem;
+    padding: 0.6rem 0.6rem;
+    gap: 0.1rem;
   }
 }
