Fix form resposiveness

--- a/src/Components/Layout/Header/Header.module.css
+++ b/src/Components/Layout/Header/Header.module.css
@@ -13,7 +13,9 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
   z-index: 10;
 }
-
+h1 {
+  text-align: center;
+}
 .buttons-container {
   display: flex;
   flex-direction: row;
@@ -40,7 +42,7 @@
 .payment-language-button:hover {
   background-color: #00245e;
 }
-@media (max-width: 768px) {
+@media (max-width: 920px) {
   h1 {
     font-family: inherit;
     font-weight: 600;
