--- a/src/Components/Payment/Payment.module.css
+++ b/src/Components/Payment/Payment.module.css
@@ -2,7 +2,17 @@
   text-align: center;
   padding-top: 15px;
 }
-
+.cart-title {
+  border-bottom: 1px solid black;
+  margin-bottom: 10px;
+}
+.cart-title p {
+  font-size: 2rem;
+  text-align: center;
+  margin: 0;
+  margin-top: -15px;
+  font-weight: bold;
+}
 .actions button {
   font: inherit;
   cursor: pointer;
