--- a/src/Components/Cart/Checkout.module.css
+++ b/src/Components/Cart/Checkout.module.css
@@ -70,3 +70,9 @@
   border-color: #700000;
   background-color: #ffeff1;
 }
+
+.actions button[disabled] {
+  background-color: #ccc; /* Change the background color when disabled */
+  color: #666; /* Change the text color when disabled */
+  cursor: not-allowed; /* Change the cursor style when disabled */
+}
