--- a/src/Components/Layout/Header/Footer.module.css
+++ b/src/Components/Layout/Header/Footer.module.css
@@ -1,44 +1,37 @@
 .footer {
   width: 100%;
-  min-height: 200px;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  min-height: 10px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
-  gap: 50px;
-}
-.returningPolicy {
-  width: 20%;
-}
-.privacyPolicy {
-  width: 20%;
+  gap: 10px;
+  align-items: center;
+  padding: 20px;
 }
 
-.privacyPolicy a {
-  color: white;
-  text-decoration: none;
+.policy a {
+  color: rgb(51, 51, 51);
+  font-size: larger;
 }
-.privacyPolicy a:hover {
-  color: rgba(0, 174, 255, 0.993);
+.policy a:hover {
+  color: rgba(0, 68, 146, 0.993);
 }
 .footer p {
-  font-size: 1rem;
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+.imagesContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 .visaImage {
-  width: 100px;
-  height: auto;
-  object-fit: cover;
-  display: block;
+  max-width: 4rem;
+  height: 2rem;
+}
+.masterImage {
+  max-width: 9rem;
+  height: 2.2rem;
 }
 @media (max-width: 500px) {
-  .footer {
-    flex-direction: column;
-  }
-  .returningPolicy {
-    width: 80%;
-  }
-  .privacyPolicy {
-    width: 80%;
-  }
 }
